// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with edit permission 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
      <ProfileExporters
        exporters={Array []}
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
      <ProfilePermissions
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        organization="org"
        profile={
          Object {
            "actions": Object {
              "edit": true,
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders without permissions 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        organization="org"
        profile={Object {}}
      />
      <ProfileExporters
        exporters={Array []}
        organization="org"
        profile={Object {}}
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        organization="org"
        profile={Object {}}
        profiles={Array []}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        organization="org"
        profile={Object {}}
      />
    </div>
  </div>
</div>
`;
